Fixed PriceBox z-index

--- a/src/components/Mugs/PriceBox/PriceBox.css
+++ b/src/components/Mugs/PriceBox/PriceBox.css
@@ -9,4 +9,5 @@
   margin: 3rem;
   box-shadow: rgba(17, 12, 46, 0.05) 0px 25px 25px 0px;
   font-family: "Inter Medium", sans-serif;
+  z-index: 9999;
 }
